# django

./: Dockerfile  manage.py  pyproject.toml
api/: custom_view.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_alter_generation_uid.py  0003_rename_user_id_generation_user_and_more.py  0004_alter_images_uid.py  0005_alter_images_url.py
lpdalle/: asgi.py  config.py  settings.py  urls.py  wsgi.py
users/: admin.py  forms.py  manager.py  models.py  tests.py
users/migrations/: 0001_initial.py
